# blackbox

./: .gitignore  DEVELOPER.md  README.md  annotate.sh  blackbox.cabal  run
src/: Blackbox.hs  FileUtils.hs  GHCIProc.hs  ListUtils.hs  Main.hs  Mirage.hs  Paths_blackbox.hs  TokenUtils.hs  Type.hs
src/Function/: PatternSplitter.hs  Scope.hs  TypeFooler.hs  TypeLineInsert.hs
src/Language/Haskell/Her/: HaLay.lhs
tests/: CombinedTests.hs  ScopeTests.hs  SplitTests.hs  TypeLineTests.hs  clean.sh  tests.sh
tests/Types/: Lists.hs
tests/results/: CombinedTests  CombinedTests.hs  ScopeTests  ScopeTests.hs  SplitTests  SplitTests.hs  TypeLineTests  TypeLineTests.hs
tests/results/Types/: Cards.hs  Trees.hs  User.hs
